minor fixes and added buttons for different modes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 <body>
     <header>
-
+        <div>
+            <button type="button" id="easy">Easy</button>
+            <button type="button" id="medium">Medium</button>
+            <button type="button" id="hard">Hard</button>
+        </div>
     </header>
     <main>
         <div class="gameboard">
