starting from scratch AGAIN

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>flipIT</title>
 
     <!-- styling -->
     <link rel="stylesheet" href="style.css">
@@ -24,10 +24,7 @@
     <main>
         <div class="gameboard">
             <div class="container">
-                <div class="card">
-                    <div class="front-face"></div>
-                    <div class="back-face"></div>
-                </div>
+                <!-- cards will be inserted here -->
             </div>
         </div>
     </main>
