added btn event listener

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- script -->
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
