added a credits section to credit resources i've used

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- styling -->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- script -->
     <script defer src="script.js"></script>
@@ -29,6 +30,9 @@
         </div>
     </main>
     <footer>
+        <div>
+            <!-- <a href="credit.html">credits</a> -->
+        </div>
 
     </footer>
 </body>
