fixed some styling, added to the credits section

--- a/credit.html
+++ b/credit.html
@@ -1,1 +1,6 @@
+<!-- styling -->
+<!-- Favicon -->
 <a target="_blank" href="https://icons8.com/icon/jyXvSnmcJjrx/code-blocks">Code Blocks</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+
+<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns" target="_blank" rel="noopener noreferrer">grid template columns</a>
+
