added rgb random color generator and applied it to front-face -- how to shuffle?

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- styling -->
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon/icons8-code-blocks-bubbles-32.png" type="image/x-icon">
 
     <!-- script -->
     <script defer src="script.js"></script>
