--- a/credit.html
+++ b/credit.html
@@ -1,6 +1,12 @@
 <!-- styling -->
 <!-- Favicon -->
-<a target="_blank" href="https://icons8.com/icon/jyXvSnmcJjrx/code-blocks">Code Blocks</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icon/jyXvSnmcJjrx/code-blocks">Code Blocks</a> icon by <a target="_blank"
+    href="https://icons8.com">Icons8</a>
 
-<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns" target="_blank" rel="noopener noreferrer">grid template columns</a>
+<!-- Grid -->
+<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns" target="_blank"
+    rel="noopener noreferrer">grid template columns</a>
 
+<!-- Color Generator -->
+<a href="https://code.tutsplus.com/how-to-code-a-random-color-generator-in-javascript--cms-39861t" target="_blank"
+    rel="noopener noreferrer">How to Generate Random Colors Using RGB</a>
