cleaned up comments and added a click counter -> inject into HTML next

--- a/credit.html
+++ b/credit.html
@@ -10,3 +10,7 @@
 <!-- Color Generator -->
 <a href="https://code.tutsplus.com/how-to-code-a-random-color-generator-in-javascript--cms-39861t" target="_blank"
     rel="noopener noreferrer">How to Generate Random Colors Using RGB</a>
+
+<!-- Card Shuffler -->
+<a href="https://www.freecodecamp.org/news/how-to-shuffle-an-array-of-items-using-javascript-or-typescript/"
+    target="_blank" rel="noopener noreferrer">Shuffle Algorithm: Fisher-Yates</a>
