updated click count so it displays live in the browser as well as cosole

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button type="button" id="easy">Easy</button>
             <button type="button" id="medium">Medium</button>
             <button type="button" id="hard">Hard</button>
+            <div id="click-count">Click Count: 0</div>
         </div>
     </header>
     <main>
