added a timer where it will restart everytime a game board is created

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button type="button" id="medium">Medium</button>
             <button type="button" id="hard">Hard</button>
             <div id="click-count">Click Count: 0</div>
+            <div id="timer">Time: 0 seconds</div>
         </div>
     </header>
     <main>
