added resources and credits

--- a/index.html
+++ b/index.html
@@ -20,18 +20,24 @@
 <body>
     <header>
         <div class="intro">
-        <h1>flip IT</h1>
-        <p>flip the cards <br> match the colors</p>
-    </div>
+            <h1>flip IT</h1>
+            <p>flip the cards <br> match the colors</p>
+        </div>
         <div class="mode">
             <button type="button" id="easy">Easy</button>
             <button type="button" id="medium">Medium</button>
             <button type="button" id="hard">Hard</button>
         </div>
-            <div class="stats">
-                <div id="click-count">Click Count: 0</div>
-                <div id="timer">Time: 0 seconds</div>
-            </div>
+        <div class="stats">
+            <div id="click-count">Click Count: 0</div>
+            <div id="timer">Time: 0 seconds</div>
+        </div>
+
+        <div class="links">
+            <a href="https://github.com/fa-rimi"><img src="images/favicon/github-mark.png" alt=""></a>
+            <a href="credit.html">credits</a>
+        </div>
+
     </header>
     <main>
         <div class="container">
@@ -40,12 +46,6 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div>
-            <!-- <a href="credit.html">credits</a> -->
-        </div>
-
-    </footer>
 </body>
 
 </html>
