added a flip IT link

--- a/credit.html
+++ b/credit.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h2>Resources & Credits: </h2>
+    <h2>Resources & Credits: <a href="https://fa-rimi.github.io/flipIT/">flip IT</a></h2>
     <!-- styling -->
     <!-- Favicon -->
     <a target="_blank" href="https://icons8.com/icon/jyXvSnmcJjrx/code-blocks">Code Blocks
