--- a/credit.html
+++ b/credit.html
@@ -17,6 +17,8 @@
         <span>
     </a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     </span>
+    <a target="_blank" href="https://icons8.com/icon/ARy6tFUfwclb/github">GitHub</a> icon by <a target="_blank"
+        href="https://icons8.com">Icons8</a>
 
     <!-- Grid -->
     <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns" target="_blank"
