--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             <h1>flip IT</h1>
             <p>flip the cards <br> match the colors</p>
         </div>
+        <div>
+            <label for="mode-toggle">Mode:</label>
+            <select id="mode-toggle">
+                <option value="classic">Classic</option>
+                <option value="limited">Limited</option>
+            </select>
+        </div>
         <div class="mode">
             <button type="button" id="easy">Easy</button>
             <button type="button" id="medium">Medium</button>
