changed timer from time: 0 seconds to time: 00:00

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="stats">
             <div id="click-count">Click Count: 0</div>
-            <div id="timer">Time: 0 seconds</div>
+            <div id="timer">Time: 00:00</div>
         </div>
 
         <div class="links">
