--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="links">
             <a href="https://github.com/fa-rimi"><img src="images/logos/icons8-github-48.png" alt=""></a>
-            <a href="credit.html">credits</a>
+            <a href="credits/credit.html">credits</a>
         </div>
 
     </header>
