--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <button type="button" id="easy">Easy</button>
             <button type="button" id="medium">Medium</button>
             <button type="button" id="hard">Hard</button>
+            <button type="button" id="harder">Harder</button>
         </div>
         <div class="stats">
             <div id="click-count">Click Count: 0</div>
