removed limited game mode option for now

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <label for="mode-toggle">Mode:</label>
             <select id="mode-toggle">
                 <option value="classic">Classic</option>
-                <option value="limited">Limited</option>
+                <!-- <option value="limited">Limited</option> -->
             </select>
         </div>
         <div class="mode">
