--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>flipIT</title>
 
     <!-- styling -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="client/style.css">
     <link rel="shortcut icon" href="images/logos/favicons/icons8-code-blocks-bubbles-32.png" type="image/x-icon">
     <!-- font-family: 'Poppins', sans-serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
     <!-- script -->
-    <script defer src="script.js"></script>
+    <script defer src="client/script.js"></script>
     <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"
         integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
