gitignore file, cleaned up files, added fetchScript.js

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
     <!-- script -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <script defer src="client/script.js"></script>
-    <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"
-        integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 </head>
 
 <body>
@@ -46,9 +42,10 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/fa-rimi"><img src="images/logos/icons8-github-48.png" alt=""></a>
+            <a href="https://github.com/fa-rimi"><img src="client/images/logos/icons8-github-48.png" alt="github"></a>
             <a href="credits/credit.html">credits</a>
         </div>
+        <a href="client/leaderboard.html" rel="noopener noreferrer">Leaderboard</a>
 
     </header>
     <main>
@@ -56,6 +53,7 @@
             <div class="gameboard">
                 <!-- cards will be inserted here -->
             </div>
+
         </div>
     </main>
 </body>
