--- a/client/leaderboard.html
+++ b/client/leaderboard.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
 
-    <link rel="stylesheet" href="style.css">
-    <script defer src="fetchData.js"></script>
+    <link rel="stylesheet" href="src/styles/style.css">
+    <script defer src="src/fetchData.js"></script>
 </head>
 
 <body class="leaderboard-body">
