--- a/client/leaderboard.html
+++ b/client/leaderboard.html
@@ -14,7 +14,7 @@
 
     <h2>Leaderboard</h2>
 
-    <main>
+    <main class="leaderboard-container">
         <div class="leaderboard-mode">
             <button type="button" id="easy" class="leaderboard-buttons">Easy</button>
             <button type="button" id="medium" class="leaderboard-buttons">Medium</button>
