--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>flipIT</title>
 
     <!-- styling -->
-    <link rel="stylesheet" href="client/style.css">
+    <link rel="stylesheet" href="client/src/styles/style.css">
     <link rel="shortcut icon" href="images/logos/favicons/icons8-code-blocks-bubbles-32.png" type="image/x-icon">
     <!-- font-family: 'Poppins', sans-serif; -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
     <!-- script -->
-    <script defer src="client/script.js"></script>
+    <script defer src="client/src/script.js"></script>
 </head>
 
 <body>
@@ -28,6 +28,11 @@
             <select id="mode-toggle">
                 <option value="classic">Classic</option>
                 <!-- <option value="limited">Limited</option> -->
+            </select>
+
+            <select id="color-mode-select">
+                <option value="original">Original Colors</option>
+                <option value="high-contrast">High Contrast</option>
             </select>
         </div>
         <div class="mode">
